--- a/css/site.css
+++ b/css/site.css
@@ -85,9 +85,32 @@ img {
   margin:auto; 
   width:100%;
 }
-code {
-  font-size:1.1em;
-  color:#82b446;
+p code,
+li code {
+  font-size: 1.3em;
+  color: black;
+  background: white;
+  padding: 2px 5px;
+}
+aside {
+  font-family: 'Roboto Slab', serif;
+  font-size:.9em;
+  font-weight:400;
+  line-height:1.4em;
+  padding:10px;
+  background:#333;
+  color:#f6f6f6;
+}
+@media (min-width:650px) {
+  aside {
+    float:right;
+    width:40%;
+    margin:.8em 0 .8em 1em;
+  }
+}
+.highlight pre {
+  padding:10px;
+  line-height:1.2em;
 }
 #tut-list {
   margin:20px 0 0;
