--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,10 +1,6 @@
-/*-------------------
-
-Syntax Highlighting 
-https://github.com/mojombo/tpw/blob/master/css/syntax.css
-
--------------------*/
-
+.highlight  {
+  background: #ffffff;
+}
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
 .highlight .k { font-weight: bold } /* Keyword */
@@ -57,7 +53,7 @@ https://github.com/mojombo/tpw/blob/master/css/syntax.css
 .highlight .si { color: #d14 } /* Literal.String.Interpol */
 .highlight .sx { color: #d14 } /* Literal.String.Other */
 .highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #d14 } /* Literal.String.Single */
+.highlight .s1 { color: #11A7DD } /* Literal.String.Single */
 .highlight .ss { color: #990073 } /* Literal.String.Symbol */
 .highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
 .highlight .vc { color: #008080 } /* Name.Variable.Class */
