change body font

--- a/css/site.css
+++ b/css/site.css
@@ -2,7 +2,7 @@
 body {
   padding:0; margin:0;
   background-color:#f9f9f9;
-  font: 100 1em/1.7em "Helvetica", arial, sans-serif;
+  font: 100 1em/1.7em "Comfortaa", arial, sans-serif;
   color:#555;
 }
 nav {
