--- a/css/site.css
+++ b/css/site.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:700,400,100);
+@import url(https://fonts.googleapis.com/css?family=Comfortaa);
 body {
   padding:0; margin:0;
   background-color:#f9f9f9;
