change color and font

--- a/css/site.css
+++ b/css/site.css
@@ -1,8 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Comfortaa);
 body {
   padding:0; margin:0;
-  background-color:#f9f9f9;
-  font: 100 1em/1.7em "Comfortaa", arial, sans-serif;
+  background-color:#fcd4a9;
+  font: 100 1em/1.7em "Helvetica", arial, sans-serif;
   color:#555;
 }
 nav {
