--- a/css/site.css
+++ b/css/site.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Comfortaa);
 body {
   padding:0; margin:0;
-  background-color:#f9f9f9;
+  background-color:#ffffff;
   font: 100 1em/1.7em "Comfortaa";
   color:#555;
 }
